--- a/web/_static/style.css
+++ b/web/_static/style.css
@@ -2,11 +2,16 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    background-color: #333;
+    background-color: #3A3A3A;
     color: #eee;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    /* fire background*/
+    background-image: url('joe-griffin-fire-animation.gif');
+    background-repeat: repeat-x; /* Repeat horizontally */
+    background-position: bottom center;
+    background-size: repeat; /* Adjust the height (80px) as needed */
 }
 
 header {
@@ -19,14 +24,18 @@ header {
     white-space: pre-wrap;
 }
 
-header p {
+/* Style for the ASCII art title lines */
+.ascii-title-line {
     margin: 0.2em 0;
     text-align: center;
+    font-family: monospace;
+    font-size: 1.2em; /* You can adjust this value */
+    white-space: pre;
 }
 
 main {
     padding: 20px;
-    background-color: #444;
+    background-color: #333;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     margin: 0 auto 30px auto;
